# cross-media-uploader

./: .env.example  .gitignore  README.md  asb-uploader.sh  main.sh  package.json  pyproject.toml  x-uploader.sh
electrion-ui/: .gitignore  package.json  post.d.ts
electrion-ui/main/: background.ts  config.ts  preload.ts
electrion-ui/main/handlers/: imageHandler.ts  index.ts  postHandler.ts  shellHandler.ts
electrion-ui/main/services/: PostService.ts  SchedulerService.ts  ShellService.ts  WindowService.ts  index.ts
electrion-ui/renderer/: preload.d.ts
electrion-ui/renderer/components/: CustomCheckbox.tsx  CustomDateInput.tsx  CustomDropzone.tsx  CustomNavbar.tsx  CustomRadio.tsx  CustomTagsInput.tsx  CustomTextInput.tsx  PostForm.tsx  PostList.tsx
electrion-ui/renderer/hooks/: useScriptExecutor.ts
electrion-ui/renderer/pages/: _app.tsx  form.tsx  home.tsx  next.tsx  post.tsx  postform.tsx  postlist.tsx  script.tsx  store.tsx
electrion-ui/scripts/: asb-uploader.sh  example.sh  x-uploader.sh
electrion-ui/shared/types/: genre.ts  status.ts  target.ts
main/handlers/: postHandler.ts
main/helpers/: create-window.ts
main/services/: PostService.ts  SchedulerService.ts  ShellService.ts
python-ui/: main.py  pyproject.toml
renderer/: next.config.js
renderer/components/: CustomDateInput.tsx  CustomDropzone.tsx  CustomNavbar.tsx  CustomTagsInput.tsx
renderer/pages/: _app.tsx  _document.tsx  postform.tsx  postlist.tsx
scripts/: asb-uploader.sh  bs-uploader.sh
shared/interface/: post.d.ts
shared/types/: character.ts  status.ts
(+5 files in other folders)
