[project]
name = "cross-media-uploader"
version = "0.1.0"
description = ""
authors = [
    {name = "zer0"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tkinterdnd2 (>=0.4.3,<0.5.0)",
    "pysimplegui (>=5.0.8.3,<6.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"  # PySide6がサポートする範囲に制限
pyside6 = "^6.9.0"